--- a/main.css
+++ b/main.css
@@ -9,6 +9,19 @@
   margin-right:auto;
   width:960px;
 }
+.main{
+  border-radius: 2px;
+  border-width: 5px;
+  border-style: groove;
+  border-color: lightgrey;
+  overflow-y: scroll;
+  height: 500px;
+  position: relative;
+}
+.inner{
+  margin: 0 30px;
+
+}
 body{  
         background: url(Images/back.jpg) no-repeat center center fixed; 
         -webkit-background-size: cover;
@@ -19,6 +32,7 @@ body{
         height: 100%;
         font-family: 'Nunito', sans-serif;
         color: white;
+        padding: 20px;
       }
 
 
