server testing code added

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -8,13 +8,8 @@
 		<input type=file name=file><br>
 		<input type=submit value="Get annotation">
 	</form>
-{% if images %}
-	{% for imgName in images %}
-  <img src= "{{imgName}}">
-  {% endfor %}
-{% else %}
-  <h1>{{images}}</h1>
-{% endif %}
+
+  <h1>{{imgName}}</h1>
 </body>
 </html>
 
